@@ -145,6 +145,7 @@ class ExportImportZCMLLayer:
         import Products.GenericSetup
 
         zcml.load_config('meta.zcml', Products.Five)
+        zcml.load_config('meta.zcml', Products.GenericSetup)
         zcml.load_config('permissions.zcml', Products.Five)
         zcml.load_config('traversing.zcml', Products.Five)
         zcml.load_config('configure.zcml', Products.GenericSetup)
